style: simplify layout structure by adjusting sidebar and container dimensions

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -101,7 +101,7 @@
 </head>
 
 <body class="bg-gray-100 h-screen flex items-center justify-center">
-   <div class="w-full max-w-6xl h-[90vh] bg-white rounded-lg shadow-xl overflow-hidden flex">
+   <div class="w-full h-full bg-white overflow-hidden flex">
       <!-- Sidebar -->
       <div class="w-1/4 bg-gray-50 border-r hidden md:block">
          <div class="p-4 border-b">
